# rand_fast_non_reproducible

./: .gitignore  Cargo.toml  README.md  fill_bytes.s  practrand.sh  test_output.txt
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: codeql.yml  devskim.yml  rust.yml  scorecards.yml
benches/: Cargo.toml  benchmarks.rs
benches/src/: benchmarks.rs
dev/bench/: data.js
examples/: endless_bytes.rs  endless_bytes_threadrng.rs  finite_bytes.rs
examples/common/: mod.rs
gungraun/: Cargo.toml
gungraun-benches/: Cargo.toml
gungraun-benches/src/: benchmarks.rs
gungraun/src/: benchmarks.rs
proptest-regressions/: generate.txt
src/: avx2.rs  generate.rs  jump.rs  lib.rs  reproducibility.rs  seed.rs  serde.rs  zeroize.rs
