[package]
name = "rand_triplemix"
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
description = "Pseudorandom number generator that's faster than ChaCha12Rng and has a 1.99*2<sup>382</sup>-block period"

[workspace]
members = [
    ".",        # The main crate in the current directory
    "benches",  # The new benchmark-only crate
]
resolver = "2"

[workspace.dependencies]
rand = { version = "0.10.0", default-features = false }
rand_core = "0.10"
const_format = "0.2"

[dependencies]
rand_core = { workspace = true }
generic-array = "1.3"
tiny-keccak = { version = "2.0", features = ["kmac", "sha3"] }
const_format = { workspace = true }
bytemuck = { version = "1.25", features = ["nightly_portable_simd"] }
typenum = { version = "1.19", features = ["const-generics"] }
serde = { version = "1.0", optional = true, default-features = false }
zeroize = { version = "1.8", optional = true }
once_cell = { version = "1.21.4", optional = true, default-features = false }
rand = { workspace = true }

[features]
jump = []  # Allows advancing this PRNG by an arbitrary amount.
reproducibility_same_endianness = []  # Lets you guarantee that two instances will generate the same sequence.
reproducibility_cross_platform = []  # Lets you guarantee that two instances will generate the same sequence.
zeroize = ["zeroize/zeroize_derive"]
serde = ["serde/serde_derive"]
no_std = ["once_cell/race", "once_cell/alloc", "serde/alloc"]
large_seeds_by_default = []  # Makes 288 bytes the default seed size. Enable this only if you're using fast hardware RNGs to produce seeds.

[lib]
bench = false  # Suppress use of libtest harness, since we're using criterion

[profile.release]
lto = "fat"
codegen-units = 1

[profile.bench]
debug = true

[profile.release-with-debug]
inherits = "release"
debug = true

[profile.test]
opt-level = 3

[dev-dependencies]
hypors = "0.3"
statrs = "0.18"
gf2 = "2.1"
itertools = "0.14.0"
hex = "0.4.3"
proptest = { version = "1.11", features = ["unstable"] }
serde_json = "1.0"
fsum = "0.1"

[target.'cfg(miri)'.dev-dependencies]
rand = { workspace = true }

[target.'cfg(not(miri))'.dev-dependencies]
rand = { workspace = true, features = ["thread_rng", "sys_rng"] }

[target.'cfg(any(target_arch = "x86_64", target_arch = "x86"))'.dev-dependencies]
rdrand = "0.8"
