[package]
name = "rand_triplemix"
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
description = "Pseudorandom number generator that's faster than ChaCha12Rng and has a 1.99*2<sup>382</sup>-block period"

[workspace]
members = [".", "benches", "gungraun-benches"]
resolver = "2"

[workspace.dependencies]
rand = { version = "0.10.0", default-features = false }
rand_core = "0.10"
const_format = "0.2"

[dependencies]
rand_core = { workspace = true }
bytemuck = { version = "1.25", features = ["nightly_portable_simd"] }
serde = { version = "1.0", optional = true, default-features = false }
zeroize = { version = "1.8", optional = true }
rand = { workspace = true }

[features]
reproducibility_same_endianness = []  # Lets you guarantee that two instances will generate the same sequence.
reproducibility_cross_platform = []  # Lets you guarantee that two instances will generate the same sequence.
zeroize = ["zeroize/zeroize_derive"]
serde = ["serde/serde_derive", "serde/alloc"]
default = ["reproducibility_cross_platform", "reproducibility_same_endianness"]

[lib]
bench = false  # Suppress use of libtest harness, since we're using criterion

[profile.release]
lto = "fat"
codegen-units = 1

[profile.bench]
debug = true

[profile.release-with-debug]
inherits = "release"
debug = true

[profile.test]
opt-level = 3

[dev-dependencies]
rand = { workspace = true, features = ["thread_rng", "sys_rng"] }
rand_core = { workspace = true }
chacha20 = "0.10.0"

[target.'cfg(any(target_arch = "x86_64", target_arch = "x86"))'.dev-dependencies]
rdrand = "0.8"
