[package]
name = "benches"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
rand_triplemix = { path = ".." }
criterion = "0.8"
rand = { workspace = true, features = ["thread_rng", "sys_rng"] }
rand_core = { workspace = true }
const_format = { workspace = true }
dyn-clone = "1.0.20"

[features]
bench_include_threadrng = []
reproducibility_same_endianness = ["rand_triplemix/reproducibility_same_endianness"]
reproducibility_cross_platform = ["rand_triplemix/reproducibility_cross_platform"]

[[bench]]
name = "benchmarks"
path = "src/benchmarks.rs"
harness = false  # Suppress use of libtest harness, since we're using criterion

[target.'cfg(any(target_arch = "x86_64", target_arch = "x86"))'.dependencies]
criterion-cycles-per-byte = "0.8"